--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <meta charset="UTF-8">
-    <title>Vježba</title>
+    <head>
+        <title>Vježba</title>
+    </head>
     <body>
         neki tekst
     </body>
