dodana struktura stranice

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="hr">
     <meta charset="UTF-8">
     <head>
-        <title>Vježba</title>
+        <title>Moja firma xy d.o.o.</title>
     </head>
     <body>
-        neki tekst
-        <p>
-        još nekog teksta
-        </p>
+        <header>
+            <nav>...</nav>
+        </header>
+        <main>
+            ...
+        </main>
+        <footer>
+            ...
+        </footer>
     </body>
 </html>
