--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="hr">
     <meta charset="UTF-8">
+    <meta content="width=device width, initial-scale=1.0">
     <head>
         <title>Moja firma xy d.o.o.</title>
     </head>
