--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     </head>
     <body>
         <header>
-            <nav>...</nav>
+            <nav>
+                <a href="" target="_blank">O nama</a> |
+                <a href="" target="_blank">Naše djelatnosti</a> |
+                <a href="" target="_blank">Kontakt</a> |
+            </nav>
         </header>
+        <hr>
         <main>
             ...
         </main>
