--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <header>
             <nav>
-                <a href="" target="_blank">O nama</a> |
-                <a href="" target="_blank">Naše djelatnosti</a> |
-                <a href="" target="_blank">Kontakt</a> |
+                <a href="#nekiID" target="_blank">O nama</a> |
+                <a href="#nekidrugiID" target="_blank">Naše djelatnosti</a> |
+                <a href="#nekitrećiID" target="_blank">Kontakt</a> |
             </nav>
         </header>
         <hr>
