--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <header>
+            <h1>Moja firma - xy d.o.o.</h1>
             <nav>
                 <a href="#onama" target="_blank">O nama</a> |
                 <a href="#djelatnosti" target="_blank">Naše djelatnosti</a> |
