--- a/index.html
+++ b/index.html
@@ -9,14 +9,25 @@
         <header>
             <h1>Moja firma - xy d.o.o.</h1>
             <nav>
-                <a href="#onama" target="_blank">O nama</a> |
-                <a href="#djelatnosti" target="_blank">Naše djelatnosti</a> |
-                <a href="#kontakt" target="_blank">Kontakt</a> |
+                <a href="#onama">O nama</a> |
+                <a href="#djelatnosti" >Naše djelatnosti</a> |
+                <a href="#kontakt">Kontakt</a> |
             </nav>
         </header>
         <hr>
         <main>
-            ...
+            <h2 id="onama">O nama</h2>
+            <p>
+                ...
+            </p>
+            <h2 id="djelatnosti">Naše djelatnosti</h2>
+            <p>
+                ...
+            </p>
+            <h2 id="kontakt">Kontakt</h2>
+            <p>
+                ...
+            </p>
         </main>
         <footer>
             ...
