dodana tri sectiona sa paragrafima i slikama

--- a/index.html
+++ b/index.html
@@ -16,18 +16,30 @@
         </header>
         <hr>
         <main>
+            <section>
             <h2 id="onama">O nama</h2>
             <p>
-                ...
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam asperiores quos, cum, deleniti repellendus dolorem maiores repudiandae sapiente fugiat beatae unde consectetur veritatis, doloremque provident qui doloribus aliquam quibusdam incidunt!
+                <br>
+                <img src="./media/slika1.jpg" alt="slika1" width="400" height="300">
             </p>
+            <hr>
+            </section>
+            <section>
             <h2 id="djelatnosti">Naše djelatnosti</h2>
             <p>
-                ...
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptate quidem culpa quae temporibus inventore, vero ex quis ipsum iure odio, itaque dignissimos eius doloremque modi dolorem similique, ut sunt?
+                <br>
+                <img src="./media/slika2.jpg" alt="slika2" width="400" height="300">
             </p>
+            </section>
+            <hr>
+            <section>
             <h2 id="kontakt">Kontakt</h2>
             <p>
                 ...
             </p>
+            </section>
         </main>
         <footer>
             xy d.o.o.
