dodani kontakt podatci

--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
             <section>
             <h2 id="kontakt">Kontakt</h2>
             <p>
-                ...
+                <pre>
+                    <a href="tel:+385031225883"><b>Kontakt telefon</b></a>
+                    <br>
+                    <a href="mailto:ime.prezime@gmail.com"><b>E-mail adresa</b></a>
+                </pre>
             </p>
             </section>
         </main>
